@@ -16,7 +16,8 @@ typedef at_fitting_opts_type fitting_opts_type;
 
 /* Fit splines and lines to LIST.  */
 extern spline_list_array_type __declspec(dllexport) __stdcall
-  fitted_splines (pixel_outline_list_type, fitting_opts_type *);
+  fitted_splines (pixel_outline_list_type, fitting_opts_type *,
+		  progress_func, address);
 
 /* Get a new set of fitting options */
 extern fitting_opts_type __declspec(dllexport)
@@ -26,7 +27,8 @@ __stdcall new_fitting_opts (void);
 
 /* Fit splines and lines to LIST.  */
 extern spline_list_array_type __declspec(dllimport) __stdcall
-  fitted_splines (pixel_outline_list_type, fitting_opts_type *);
+  fitted_splines (pixel_outline_list_type, fitting_opts_type *,
+		  progress_func, address);
 
 /* Get a new set of fitting options */
 extern fitting_opts_type __declspec(dllimport)
@@ -36,7 +38,7 @@ __stdcall new_fitting_opts (void);
 
 /* Fit splines and lines to LIST.  */
 extern spline_list_array_type fitted_splines
-  (pixel_outline_list_type, fitting_opts_type *);
+  (pixel_outline_list_type, fitting_opts_type *, progress_func, address);
 
 /* Get a new set of fitting options */
 extern fitting_opts_type new_fitting_opts (void);
