@@ -3,10 +3,10 @@
 #ifndef PXL_OUTLINE_H
 #define PXL_OUTLINE_H
 
+#include "autotrace.h"
 #include "bitmap.h"
 #include "types.h"
 #include "color.h"
-
 
 /* This is a list of contiguous points on the bitmap.  */
 typedef struct
@@ -50,30 +50,36 @@ typedef struct
 
 #ifdef _EXPORTING
 /* Find all pixels on the outline in the character C.  */
-extern pixel_outline_list_type __declspec(dllexport) __stdcall find_outline_pixels (bitmap_type, color_type *bg_color);
+extern pixel_outline_list_type __declspec(dllexport) __stdcall find_outline_pixels (bitmap_type, color_type *bg_color, 
+										    progress_func notify_progress, address client_data);
 
 /* Find all pixels on the center line of the character C.  */
-extern pixel_outline_list_type __declspec(dllexport) __stdcall find_centerline_pixels (bitmap_type, color_type bg_color);
+extern pixel_outline_list_type __declspec(dllexport) __stdcall find_centerline_pixels (bitmap_type, color_type bg_color, 
+										       progress_func notify_progress, address client_data);
 
 /* Free the memory in the list.  */
 extern void __declspec(dllexport) __stdcall free_pixel_outline_list (pixel_outline_list_type *);
 
 #elif _IMPORTING
 /* Find all pixels on the outline in the character C.  */
-extern pixel_outline_list_type __declspec(dllimport) __stdcall find_outline_pixels (bitmap_type, color_type *bg_color);
+extern pixel_outline_list_type __declspec(dllimport) __stdcall find_outline_pixels (bitmap_type, color_type *bg_color, 
+										    progress_func notify_progress, address client_data);
 
 /* Find all pixels on the center line of the character C.  */
-extern pixel_outline_list_type __declspec(dllimport) __stdcall find_centerline_pixels (bitmap_type, color_type bg_color);
+extern pixel_outline_list_type __declspec(dllimport) __stdcall find_centerline_pixels (bitmap_type, color_type bg_color, 
+										       progress_func notify_progress, address client_data);
 
 /* Free the memory in the list.  */
 extern void __declspec(dllimport) __stdcall free_pixel_outline_list (pixel_outline_list_type *);
 
 #else
 /* Find all pixels on the outline in the character C.  */
-extern pixel_outline_list_type find_outline_pixels (bitmap_type, color_type *bg_color);
+extern pixel_outline_list_type find_outline_pixels (bitmap_type, color_type *bg_color, 
+						    progress_func notify_progress, address client_data);
 
 /* Find all pixels on the center line of the character C.  */
-extern pixel_outline_list_type find_centerline_pixels (bitmap_type, color_type bg_color);
+extern pixel_outline_list_type find_centerline_pixels (bitmap_type, color_type bg_color, 
+						       progress_func notify_progress, address client_data);
 
 /* Free the memory in the list.  */
 extern void free_pixel_outline_list (pixel_outline_list_type *);
